 2011-09-09 08:58  paul_reeves 
   M builds/install/arch-specific/win32/FirebirdInstallSupportFunctions.inc
   M builds/install/arch-specific/win32/i18n_readme.txt
spelling, whitespace

 2011-07-16 10:38  hvlad 
   M src/jrd/vio.cpp
Backport fix for bug CORE-3557 : AV in engine when preparing query against dropping table

 2011-05-25 07:51  dimitr 
   M src/jrd/vio.cpp
Fixed the assertion.

 2011-05-12 09:03  dimitr 
   M src/jrd/build_no.h
   M src/misc/writeBuildNum.sh
Updated the version string.

 2011-05-04 23:14  asfernandes 
   M src/isql/isql.epp
Backported fix for CORE-1782 - ISQL crashes when fetching data for a column having alias longer than 30 characters.

 2011-04-13 10:30  hvlad 
   M src/jrd/event.cpp
Fixed bug CORE-3440 : AV in engine if isc_que_events queued 0 events

 2011-03-18 17:48  alexpeshkoff 
   M src/jrd/os/posix/mod_loader.cpp
Fixed CORE-3397: Unresolved symbols in intl and trace libraries

 2011-03-04 17:59  dimitr 
   M src/jrd/vio.cpp
The simplest possible fix for CORE-3374: Server may crash or corrupt data if SELECT WITH LOCK is issued against records not in the latest format. Thanks to Vlad.

 2011-02-15 10:18  hvlad 
   M src/remote/inet.cpp
   M src/remote/xdr.h
Fixed bug CORE-3351 : Windows client could put 10054 error messages into firebird.log at connection time

 2011-02-14 13:20  dimitr 
   M src/jrd/par.cpp
Fixed CORE-3097: Updating blob field cause server crash with ACCESS_VIOLATION exception. Only v2.0 is affected.

 2011-02-08 21:05  hvlad 
   M src/jrd/Optimizer.cpp
Fixed compilation error

 2011-02-03 08:00  dimitr 
   M src/jrd/cch.cpp
Removed the supposedly wrong checkout (it was added in v2.0), as theoretically it can lead to race conditions in the page cache.

 2011-01-12 10:56  dimitr 
   M doc/license/README.license.usage.txt
Corrected the license URLs.

 2010-12-20 07:27  dimitr 
   M src/jrd/Optimizer.cpp
Fixed CORE-3283: Bad plan with using LEFT OUTER JOIN in sub-select. Compilation is not tested.
