@@ -1,3 +1,10 @@
+ 2011-10-06 12:46  alexpeshkoff 
+   M builds/install/arch-specific/linux/classic/makeInstallImage.sh.in
+   M builds/install/arch-specific/linux/super/makeInstallImage.sh.in
+   M builds/install/misc/classicLibrary.sh.in
+   M builds/install/misc/superLibrary.sh.in
+Added license files to linux packages
+
  2011-09-09 08:58  paul_reeves 
    M builds/install/arch-specific/win32/FirebirdInstallSupportFunctions.inc
    M builds/install/arch-specific/win32/i18n_readme.txt
